--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,5 @@ jobs:
         server: ${{ secrets.ftp_server}}
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password}}
+        protocol: ${{ secrets.ftp_protocol}}
         server-dir: /public_html/johannes.ng/
