--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password}}
         protocol: ${{ secrets.ftp_protocol}}
-        server-dir: /public_html/johannes.ng/
+        server-dir: /public_html/
