--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,11 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
+
+    - name: Build Project
+      run: 
+        npm install
+        npm run build
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
@@ -18,4 +23,4 @@ jobs:
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password}}
         protocol: ${{ secrets.ftp_protocol}}
-        server-dir: /public_html/johannes.ng/
+        local=dir: ./build/
