--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: ${{ secrets.ftp_server}}
+        server: www.johannes.ng
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password}}
-        protocol: ${{ secrets.ftp_protocol}}
-        server-dir: johannes.ng/
+        server-dir: /public_html/johannes.ng
