--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: ${{ secrets.ftp_server}}
+        server: johannes.ng
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password}}
         server-dir: /public_html/
