--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
         server: johannes.ng
         username: ${{ secrets.ftp_username}}
         password: ${{ secrets.ftp_password}}
-        server-dir: /johannes.ng/
+        server-dir: /public_html/
